fix: update CORS config
update CORS config to use allowedOriginPatterns with credentials